# Calculator-Project

./: CMakeLists.txt  Kalkulator_dla_elektronikow.h  Kalkulator_dla_elektronikow.sln  Kalkulator_dla_elektronikow.vcxproj  Kalkulator_dla_elektronikow.vcxproj.filters  Kalkulator_dla_elektronikowDlg.cpp  README.md  conversions.cpp  conversions.h  framework.h  pch.h
Gtest/Conversions_Gtest/: Conversions_Gtest.vcxproj  conver.cpp  conver.h  test.cpp
Gtest/Conversions_Gtest/x64/Debug/: Conversions_Gtest.exe.recipe  Conversions_Gtest.vcxproj.FileListAbsolute.txt
Gtest/Conversions_Gtest/x64/Debug/Conversi.b3eb4d05.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Kalkulator_dla_elektronikowDlg.h  resource.h
res/: Kalkulatordlaelektronikow.rc2
src/: Kalkulator_dla_elektronikow.cpp  pch.cpp
x64/Debug/: Kalkulator_dla_elektronikow.exe.recipe  Kalkulator_dla_elektronikow.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Kalkulat.3D2E0374.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Kalkulator_dla_elektronikow.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
